\name{lutenews}
\title{lute News}
\encoding{UTF-8}

\section{Version 0.99.30}{
  \itemize{
    \item Documents rmse params
    \item Imports median
  }
}

\section{Version 0.99.28}{
  \itemize{
    \item Adds RMSE function rmse() and unit tests
    \item Updates pseudobulk notebook
  }
}