@@ -1,0 +1,93 @@
+name: lute
+channels:
+  - conda-forge
+  - defaults
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - _r-mutex=1.0.1=anacondar_1
+  - binutils_impl_linux-64=2.40=ha1999f0_7
+  - bwidget=1.9.14=ha770c72_1
+  - bzip2=1.0.8=hd590300_5
+  - c-ares=1.28.1=hd590300_0
+  - ca-certificates=2024.6.2=hbcca054_0
+  - cairo=1.18.0=hbb29018_2
+  - curl=8.8.0=he654da7_0
+  - expat=2.6.2=h59595ed_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_2
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.12.1=h267a509_2
+  - fribidi=1.0.10=h36c2ea0_0
+  - gcc_impl_linux-64=13.2.0=h9eb54c0_13
+  - gfortran_impl_linux-64=13.2.0=h9efe08d_13
+  - graphite2=1.3.13=h59595ed_1003
+  - gxx_impl_linux-64=13.2.0=h2a599c4_13
+  - harfbuzz=8.5.0=hfac3d4d_0
+  - icu=73.2=h59595ed_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_17
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.2=h659d440_0
+  - ld_impl_linux-64=2.40=hf3520f5_7
+  - lerc=4.0.0=h27087fc_0
+  - libblas=3.9.0=22_linux64_openblas
+  - libcurl=8.8.0=hca28451_0
+  - libdeflate=1.20=hd590300_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-devel_linux-64=13.2.0=hdb50d1a_113
+  - libgcc-ng=13.2.0=h77fa898_13
+  - libgfortran-ng=13.2.0=h69a702a_13
+  - libgfortran5=13.2.0=h3d2ce59_13
+  - libglib=2.80.2=hf974151_0
+  - libgomp=13.2.0=h77fa898_13
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=22_linux64_openblas
+  - libnghttp2=1.58.0=h47da74e_1
+  - libopenblas=0.3.27=pthreads_h413a1c8_0
+  - libpng=1.6.43=h2797004_0
+  - libsanitizer=13.2.0=h6ddb7a1_13
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-devel_linux-64=13.2.0=hdb50d1a_113
+  - libstdcxx-ng=13.2.0=hc0a3c3a_13
+  - libtiff=4.6.0=h1dd3fc0_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.16=hd590300_0
+  - libzlib=1.3.1=h4ab18f5_1
+  - make=4.3=hd18ef5c_1
+  - ncurses=6.5=h59595ed_0
+  - openssl=3.3.1=h4ab18f5_1
+  - pango=1.54.0=h84a9a3c_0
+  - pcre2=10.43=hcad00b1_0
+  - pixman=0.43.2=h59595ed_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - r-base=4.4.0=h019f4a6_1
+  - readline=8.2=h8228510_1
+  - sed=4.8=he412f7d_0
+  - sysroot_linux-64=2.12=he073ed8_17
+  - tk=8.6.13=noxft_h4845f30_101
+  - tktable=2.10=h8bc8fbc_6
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.9=hb711507_1
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-libxt=1.3.0=hd590300_1
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xz=5.2.6=h166bdaf_0
+  - zlib=1.3.1=h4ab18f5_1
+  - zstd=1.5.6=ha6fb4c9_0
+prefix: /root/miniconda3/envs/lute
