@@ -1,3 +1,15 @@
+@article {maden_lute-preprint_2024,
+	author = {Maden, Sean K. and Huuki-Myers, Louise A. and Kwon, Sang Ho and Collado-Torres, Leonardo and Maynard, Kristen R. and Hicks, Stephanie C.},
+	title = {lute: estimating the cell composition of heterogeneous tissue with varying cell sizes using gene expression},
+	year = {2024},
+	doi = {10.1101/2024.04.04.588105},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {},
+	URL = {https://www.biorxiv.org/content/early/2024/04/06/2024.04.04.588105},
+	eprint = {https://www.biorxiv.org/content/early/2024/04/06/2024.04.04.588105.full.pdf},
+	journal = {bioRxiv}
+}
+
 
 @article{darmanis_survey_2015,
 	title = {A survey of human brain transcriptome diversity at the single cell level},
