@@ -30,9 +30,10 @@ knitr::opts_chunk$set(echo=FALSE, eval=TRUE)
 # About
 
 This guide describes `lute`'s generics, methods, and classes for algorithms, 
-including deconvolution and marker selection algorithms. This may be useful to 
-algorithm developers and researchers interested in conducting systematic 
-algorithm benchmarks.
+including deconvolution and marker selection algorithms. This software and the 
+method to rescale on cell type-specific sizes is detailed in the manuscript
+@maden_lute-preprint_2024. This may be useful to algorithm developers and 
+researchers interested in conducting systematic algorithm benchmarks.
 
 ## Background 
 
@@ -48,7 +49,7 @@ benchmarks, as software that is not actively maintained can become deprecated
 over time, and not all software will use compatible dependency versions 
 (@maden_challenges_2023). 
 
-`lute` classes can helo with this to (1.) encourage use of common Bioconductor 
+`lute` classes can help to (1.) encourage use of common Bioconductor 
 object classes (e.g. `SummarizedExperiment`, `SingleCellExperiment`, 
 `DelayedArray`, etc.) and (2.) to use more standard inputs and outputs to 
 encourage code reuse, discourage duplicated efforts, and enable more rapid and 
