@@ -2,6 +2,14 @@
 \title{lute News}
 \encoding{UTF-8}
 
+\section{Version 0.99.31}{
+  \itemize{
+    \item Updates user's guide with preprint citation, instructions for conda and docker
+    \item Adds inst/yml/lute.yml and inst/yml/setup.R for conda env setup
+    \item Adds preprint citation to vignette/bibliography.bib
+  }
+}
+
 \section{Version 0.99.30}{
   \itemize{
     \item Documents rmse params
